<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_object_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_avatar"
            android:layout_width="106dp"
            android:layout_height="97dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/ismairacle"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />


        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/ex_user_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_detail_avatar"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar" />

        <TextView
            android:id="@+id/tv_detail_repository_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/ex_repository"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_repository" />

        <TextView
            android:id="@+id/tv_detail_followers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_followers"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers" />

        <TextView
            android:id="@+id/tv_detail_following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_following"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_following" />

        <TextView
            android:id="@+id/tv_detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ex_google_indonesia"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />

        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_jakarta_indonesia"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_company" />

        <TextView
            android:id="@+id/tv_detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_repository_text"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_repository" />

        <TextView
            android:id="@+id/tv_detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_following_text"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_following" />

        <TextView
            android:id="@+id/tv_detail_repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>